# babygame

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PYTHON-SPEC.md  README.md  WEB-SPEC.md  forparents.md  package.json  pyproject.toml  requirements.txt  setup.py  test_installation.py
babygame/: __init__.py
python/: babycolor.py
web/: index.html
